edit job family
